# WEBRC505MKII

./: .gitattributes  .gitignore  2026_RCReaderOnline_code_only.md  AudioLinker.vue  FIX_REPORT.md  README.md  XML_FIX_STATUS.md  aggregate.py  compare_xml_full.py  compare_xml_regex.py  extract_pdf.py  implementation_plan.md  index.html  inspect_structure.py  inspect_structure_v2.py  manual_dump.txt  migrate_structure.ps1  package-lock.json  package.json  parameter_dictionary.json  playwright.config.ts  project_code_full.md  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
backend/: main.py
data/: MEMORY050A.RC0
docs/: BUGFIX_LOOPHALO_ROTATION.md  CRITICAL_AUDIO_IO_SAFETY.md  CURRENT_RELEASE_VERIFICATION_2026-03-26.md  CURRENT_STATUS_2026-03-24.md  HOT_SWAP_RECORDING_MONITORING_REGRESSION_CHECKLIST_2026-03-25.md  MASTER_TRACK_IMPLEMENTATION.md  MASTER_TRACK_VERIFICATION.ts  PHASE1_IMPLEMENTATION.md  PHASE1_总结.md  PHASE2B_QUANTIZED_RECORDING.md  PHASE2C_QUANTIZED_STOP.md  PHASE2_IMPLEMENTATION.md  PHASE2_总结.md  PHASE3_IMPLEMENTATION.md  PHASE3_总结.md  PHASE4_FILTER_FX.md  RC505MKII_PANEL_UI_ROADMAP.md  TESTING_AND_PUSH_POLICY.md  THRU_BUTTON.md  UI_REFACTOR_RC505.md  主轨道实现总结.md  快速参考.md
native-mvp/docs/: native-core-mvp.md
native-mvp/engine-cpp/: CMakeLists.txt
native-mvp/engine-cpp/include/: looper_core.hpp  native_audio_core.hpp
native-mvp/engine-cpp/src/: looper_core.cpp  native_audio_core.cpp  native_bridge_host.cpp
native-mvp/engine-cpp/tests/: looper_core_tests.cpp
public/worklets/: looper-processor.js
src/: App.vue  env.d.ts  main.ts  style.css
src/FX/: new.vue  phaser.js  phaser.ts
src/audio/: AudioEngine.ts  AudioEngineInterface.ts  BrowserAudioEngine.ts  FXChain.ts  LpfEffect.vue  NativeAudioEngine.ts  NativeBridgeClient.ts  NativeTrackProxy.ts  ReverbEffect.vue  RhythmEngine.ts  TrackAudio.ts  browserRecordingOffset.ts
src/components/: AudioSettings.vue  BrowserAudioSettings.vue  BrowserRecordingOffsetSettings.vue  ComponentShowcase.vue  LatencyTuner.vue  LoopHalo.vue  RhythmControls.vue  TopPanel.vue  TopStatusStrip.vue  TrackUnit.vue  TransportControls.vue  WebToolLayer.vue
src/composables/: useAudioEngine.ts  useAudioRecorder.ts  useFxPanelState.ts  useMetronome.ts  usePanelFocus.ts  useTrack.ts  useTrackStripState.ts  useUiStyle.ts
web/: debug.html  index.html  script.js  style.css
(+87 files in other folders)
